# Project-Epoch-Zero

./: .gitignore  README.md  Untitled.ipynb  debug_app.py  main.py  pyproject.toml  setup_env.sh
.devcontainer/: devcontainer.json  setup_env.sh
.virtual_documents/notebooks/: notebook_pinn_v1.ipynb  notebook_pinn_v3.ipynb
assets/: style.css
models/: pinn_model.pth
notebooks_temp/: earth.py  err_hybrid.npy  err_sgp4.npy  historical_tles_50803_2022-01-06_2025-12-17.csv  history_50803_2022-01-01_2025-12-17.csv  notebook_pinn_v1.ipynb  notebook_pinn_v3.1.1.ipynb  notebook_pinn_v3.1.2.ipynb  notebook_pinn_v3.1.ipynb  notebook_pinn_v3.2.ipynb  notebook_pinn_v3.3.ipynb  notebook_pinn_v3.ipynb  orbit_error_model.pth  orbit_error_model_pinn.pth  orbit_error_model_pinn_v3.1.pth  orbit_error_model_pinn_v3.3.pth  orbit_error_model_pinn_v3.pth  orbit_error_model_weather.pth  pinn_v3.1.1.py  sample_satellites.csv  scaler_X.pkl  scaler_X_weather.pkl  scaler_Y.pkl  temp.csv  temp_quiet.csv  temp_storm.csv  temp_stress.csv  test_residuals_72h.csv  training_residuals.csv  training_residuals_clean.csv  training_residuals_weather.csv
notebooks_temp/.ipynb_checkpoints/: notebook_pinn_v1-checkpoint.ipynb  notebook_pinn_v3-checkpoint.ipynb  notebook_pinn_v3.1.1-checkpoint.ipynb
notebooks_temp/data/: SW-Last5Years.csv
notebooks_temp/sat/: historical_tles_51976_20220309_20251217.csv
src/: app.py  deployer.py  model.py  train.py  utils.py
tests/: test_app_load.py  test_model_load.py
